[project]
name = "ai-agent-systems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain-openai>=1.2.2",
    "langchain[anthropic]>=1.3.2",
    "langgraph>=1.2.2",
    "python-dotenv>=1.2.2",
]
